--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Adin Mauer Portfolio Website
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://mauer4.github.io/'
 
 ############################
 ## LANGUAGE
