--- a/.github/workflows/medium-sync.yml
+++ b/.github/workflows/medium-sync.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser
+          pip install feedparser requests
 
       - name: Import Medium RSS
         env:
@@ -30,6 +30,8 @@ jobs:
             echo "FEED_URL is not set. Define repo Secret MEDIUM_FEED_URL or Variable MEDIUM_FEED_URL." >&2
             exit 1
           fi
+          echo "Checking feed endpoint headers..."
+          curl -sSL -I "$FEED_URL" | sed -n '1,6p'
           python scripts/sync_medium.py --feed "${FEED_URL}"
 
       - name: Commit changes
